Bug 509062 - Open Library - Failure to fill in the "comments" field for some books
Summary: Open Library - Failure to fill in the "comments" field for some books
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.3
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-03 09:07 UTC by louise.ripley
Modified: 2025-09-04 01:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description louise.ripley 2025-09-03 09:07:32 UTC
SUMMARY
Tellico does not fill in the "comments" field for some books.

The problem seems to be that for some books, the Editions API returns the "notes" key with the subkeys "type" and "value":
  * https://openlibrary.org/books/OL39492768M.json
  * https://openlibrary.org/books/OL17952222M.json
For other books, the "notes" key has no subkeys:
  * https://openlibrary.org/books/OL59946878M.json
  * https://openlibrary.org/books/OL39202180M.json
  * https://openlibrary.org/books/OL32127970M.json

I opened an issue on OpenLibrary.
For now, developers must handle both situations : https://github.com/internetarchive/openlibrary/issues/11218


STEPS TO REPRODUCE
1. Create a new book collection
2. Add entry from "Internet Search..."
3. Search "1494871513"
   Search type: ISBN
   Search source: Open Library
4. The returned book does not contain the "comments" field.
   Yet the API call returns the notes field: https://openlibrary.org/books/OL32127970M.json


SOFTWARE/OS VERSIONS
OS: Linux Mint 22.1 (Xia) - Cinnamon
Tellico: 4.1.3
KDE Frameworks: 6.13.0
Qt: Using 6.9.0 and built against 6.9.0
KDE Flatpak runtime (Xcb)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.14.0-28-generic
Comment 1 Robby Stephenson 2025-09-04 01:38:10 UTC
Git commit e41b3a54472968a0793c616e5cd2bbc55def015f by Robby Stephenson.
Committed on 04/09/2025 at 01:37.
Pushed by rstephenson into branch 'master'.

OpenLibraryFetcher: check for both value and object text in notes
FIXED-IN: 4.1.4

M  +4    -0    ChangeLog
M  +6    -1    src/fetch/openlibraryfetcher.cpp

https://invent.kde.org/office/tellico/-/commit/e41b3a54472968a0793c616e5cd2bbc55def015f
Comment 2 Robby Stephenson 2025-09-04 01:39:50 UTC
Git commit e2802fc3a7e38b4f0f4d35f6c1bbad6feb2076df by Robby Stephenson.
Committed on 04/09/2025 at 01:39.
Pushed by rstephenson into branch '4.1'.

OpenLibraryFetcher: check for both value and object text in notes
FIXED-IN: 4.1.4

M  +4    -0    ChangeLog
M  +6    -1    src/fetch/openlibraryfetcher.cpp

https://invent.kde.org/office/tellico/-/commit/e2802fc3a7e38b4f0f4d35f6c1bbad6feb2076df