OpenLibraryFetcher: check for both value and object text in notes

BUG: 509062
FIXED-IN: 4.1.4